--- a/drill-conf/drill-override.conf
+++ b/drill-conf/drill-override.conf
@@ -25,5 +25,9 @@ drill.exec: {
   memory: {
     enable_frag_limit: "true",
     frag_mem_overcommit_factor:"1.0"
+  },
+  scan: {
+    threadpool_size: 2,
+    decode_threadpool_size: 1
   }
 }
