--- a/drill-conf/drill-override.conf
+++ b/drill-conf/drill-override.conf
@@ -26,8 +26,47 @@ drill.exec: {
     enable_frag_limit: "true",
     frag_mem_overcommit_factor:"1.0"
   },
+#
+# change the rpc heartbeat timeout. Keep this in sync with the server to make sure 
+# the server doesn't break off the connection (esp if this conf file is not shared
+# between the two)
+#
+#  rpc: {
+#    user: {
+#      timeout: 3600
+#    },
+#    bit: {
+#      timeout: 3600
+#    }
+#  },
   scan: {
     threadpool_size: 2,
     decode_threadpool_size: 1
   }
+
+  security.user.encryption.ssl: {
+    enabled: true,
+    keyPassword: drill123,
+    protocol: TLSv1.2
+  }
+#  ssl.provider: OPENSSL
+  ssl.keyStoreType: "JKS",
+  ssl.keyStorePath: "/Users/pchandra/work/drill-conf/ssl/keystore.ks"
+  ssl.keyStorePassword: drill123,
+  ssl.trustStoreType: "JKS",
+  ssl.trustStorePath: "/Users/pchandra/work/drill-conf/ssl/truststore.ks",
+  ssl.trustStorePassword: drill123,
+
+  http.ssl_enabled: true
+
 }
+
+#javax.net.ssl: {
+#  keyStoreType: "JKS",
+#  keyStore: "/Users/pchandra/work/drill-conf/ssl/keystore.ks"
+#  keyStorePassword: drill123,
+#  trustStoreType: "JKS",
+#  trustStore: "/Users/pchandra/work/drill-conf/ssl/truststore.ks",
+#  trustStorePassword: drill123
+#}
+
